# TNS

./: .gitignore
backend/: Cargo.toml  diesel.toml
backend/migrations/2023-10-20-000001_news_headlines/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
scheduled_populator/: logging_config.py  main.py  requirements.txt  scheduler.py
scheduled_populator/db/: sqlite.py
scheduled_populator/scraper/: news_scraper.py  utils.py
scheduled_populator/sector_classification/: sector_based_classification.py
scheduled_populator/sentiment_analysis/: news_sentiment_analysis.py
